--- a/FED/CA2/html/aboutMe.html
+++ b/FED/CA2/html/aboutMe.html
@@ -56,9 +56,10 @@
     <section class="sec">
         <div class="container-lg">
             <div class="row">
-                <div class="col-lg-8">
+                <div class="col-lg-8 py-5 px-5 text-area">
                     <h1 class="display-3 text-dark text-center">So, who am I?</h1>
-                    <p class="lead text-dark">I'm a student at the University of New South Wales, Sydney, Australia. I'm studying
+                    <p class="lead text-dark">Hello everyone! My name is Min Thit Khine, and I am currently a DCITP student at Singapore Polytechnic.</p>
+                    <p class="lead text-dark"></p>
                 </div>
                 <!-- Profile Image -->
                 <div class="col-lg-4 profile">
