--- a/FED/CA2/html/aboutMe.html
+++ b/FED/CA2/html/aboutMe.html
@@ -59,17 +59,30 @@
                 <div class="col-lg-8 py-5 px-5 text-area">
                     <h1 class="display-3 text-dark text-center">So, who am I?</h1>
                     <p class="lead text-dark">Hello everyone! My name is Min Thit Khine, and I am currently a DCITP student at Singapore Polytechnic.</p>
-                    <p class="lead text-dark"></p>
+                    <p class="lead text-dark">One of my main interests is sustainable living and developing innovative solutions for reducing the negative effects of climate change. I'm convinced that small changes can have a big difference, so I am dedicated to utilizing eco-friendly practices into my daily life. From recycling and reducing waste to embracing renewable energy sources, I strive to live a low-carbon lifestyle.</p>
                 </div>
                 <!-- Profile Image -->
                 <div class="col-lg-4 profile">
                     <img src="../images/profile.png" alt="" class="img-fluid img-rounded">
                 </div>
             </div>
-            <div class="row">
-                <div class="col-lg-4">hi</div>
-                <div class="col-lg-4">hi</div>
-                <div class="col-lg-4">hi</div>
+        </div>
+    </section>
+    <section class="sec1">
+        <div class="container-lg">
+            <div class="row d-flex justify-content-center py-5">
+                <div class="col-auto display-3 text-white">My Interests</div>
+            </div>
+            <div class="row px-5 py-5 d-flex justify-content-center">
+                <div class="col-lg-4">
+                    <img src="../images/badminton.webp" alt="">
+                </div>
+                <div class="col-lg-4">
+                    <img src="../images/swimming.jpg" alt="">
+                </div>
+                <div class="col-lg-4">
+                    <img src="../images/cycling.jpg" alt="">
+                </div>
             </div>
         </div>
     </section>
