--- a/FED/CA2/html/aboutMe.html
+++ b/FED/CA2/html/aboutMe.html
@@ -58,32 +58,80 @@
             <div class="row">
                 <div class="col-lg-8 py-5 px-5 text-area">
                     <h1 class="display-3 text-dark text-center">So, who am I?</h1>
-                    <p class="lead text-dark">Hello everyone! My name is Min Thit Khine, and I am currently a DCITP student at Singapore Polytechnic.</p>
-                    <p class="lead text-dark">One of my main interests is sustainable living and developing innovative solutions for reducing the negative effects of climate change. I'm convinced that small changes can have a big difference, so I am dedicated to utilizing eco-friendly practices into my daily life. From recycling and reducing waste to embracing renewable energy sources, I strive to live a low-carbon lifestyle.</p>
+                    <p class="lead text-dark">Hello everyone! My name is Min Thit Khine, and I am currently a DCITP
+                        student at Singapore Polytechnic.</p>
+                    <p class="lead text-dark">One of my main interests is sustainable living and developing innovative
+                        solutions for reducing the negative effects of climate change. I'm convinced that small changes
+                        can have a big difference, so I am dedicated to utilizing eco-friendly practices into my daily
+                        life. From recycling and reducing waste to embracing renewable energy sources, I strive to live
+                        a low-carbon lifestyle.</p>
                 </div>
                 <!-- Profile Image -->
                 <div class="col-lg-4 profile">
                     <img src="../images/profile.png" alt="" class="img-fluid img-rounded">
                 </div>
             </div>
+            <div class="row">
+                <div class="row row-cols-1 row-cols-md-3 g-4">
+                    <div class="col">
+                      <div class="card h-100">
+                        <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/044.webp" class="card-img-top" alt="Skyscrapers"/>
+                        <div class="card-body">
+                          <h5 class="card-title">Card title</h5>
+                          <p class="card-text">
+                            This is a wider card with supporting text below as a natural lead-in to
+                            additional content. This content is a little bit longer.
+                          </p>
+                        </div>
+                        <div class="card-footer">
+                          <small class="text-muted">Last updated 3 mins ago</small>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="card h-100">
+                        <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" class="card-img-top" alt="Los Angeles Skyscrapers"/>
+                        <div class="card-body">
+                          <h5 class="card-title">Card title</h5>
+                          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                        </div>
+                        <div class="card-footer">
+                          <small class="text-muted">Last updated 3 mins ago</small>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="card h-100">
+                        <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/042.webp" class="card-img-top" alt="Palm Springs Road"/>
+                        <div class="card-body">
+                          <h5 class="card-title">Card title</h5>
+                          <p class="card-text">
+                            This is a wider card with supporting text below as a natural lead-in to
+                            additional content. This card has even longer content than the first to show
+                            that equal height action.
+                          </p>
+                        </div>
+                        <div class="card-footer">
+                          <small class="text-muted">Last updated 3 mins ago</small>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+            </div>
         </div>
     </section>
-    <section class="sec1">
-        <div class="container-lg">
-            <div class="row d-flex justify-content-center py-5">
-                <div class="col-auto display-3 text-white">My Interests</div>
-            </div>
-            <div class="row px-5 py-5 d-flex justify-content-center">
-                <div class="col-lg-4">
-                    <img src="../images/badminton.webp" alt="">
-                </div>
-                <div class="col-lg-4">
-                    <img src="../images/swimming.jpg" alt="">
-                </div>
-                <div class="col-lg-4">
-                    <img src="../images/cycling.jpg" alt="">
-                </div>
-            </div>
+    <section class="footer">
+        <div class="container">
+            <footer class="py-3 my-4">
+                <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+                    <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Sustainability</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About SP</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Contact Us</a></li>
+                </ul>
+                <p class="text-center text-body-secondary">&copy; 2023 Save The Earth, Greenfiy Inc</p>
+            </footer>
         </div>
     </section>
 </body>
