--- a/FED/CA2/html/index.html
+++ b/FED/CA2/html/index.html
@@ -97,7 +97,7 @@
                                         </div>
 
                                         <!-- Submit button -->
-                                        <button type="submit" class="btn btn-primary btn-lg w-100">Sign in</button>
+                                        <button type="submit" class="btn btn-primary btn-lg w-100" id="submit">Sign in</button>
 
                                         <div class="divider d-flex align-items-center my-4">
                                             <p class="text-center fw-bold mx-3 mb-0 text-muted">OR</p>
@@ -199,8 +199,8 @@
     <div class="container">
         <footer class="py-3 my-4">
             <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-                <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
-                <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
+                <li class="nav-item"><a href="./index.html" class="nav-link px-2 text-body-secondary">Home</a></li>
+                <li class="nav-item"><a href="./aboutMe.html" class="nav-link px-2 text-body-secondary">About</a></li>
                 <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Sustainability</a></li>
                 <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About SP</a></li>
                 <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Contact Us</a></li>
