--- a/FED/CA2/html/aboutMe.html
+++ b/FED/CA2/html/aboutMe.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/aboutMe_layout.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
@@ -36,13 +37,13 @@
                 <div class="offcanvas-body">
                     <ul class="navbar-nav me-auto flex-grow-1 pe-3">
                         <li class="nav-item">
-                            <a href="./index.html" class="nav-link" aria-current="page">Home</a>
+                            <a href="../html/index.html" class="nav-link" aria-current="page">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link current">About Me</a>
+                            <a href="../html/aboutMe.html" class="nav-link current">About Me</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Sustainability</a>
+                            <a href="../html/sustainability.html" class="nav-link">Sustainability</a>
                         </li>
                         <li class="nav-item">
                             <a href="#" class="nav-link">About SP</a>
@@ -73,16 +74,15 @@
                                 <div class="col-md-6 col-lg-4 col-xl-4 offset-xl-1">
                                     <form>
                                         <!-- Email input -->
-                                        <div class="form-outline mb-2">
-                                            <input type="email" id="emailInput" class="form-control form-control-lg" />
-                                            <label class="form-label" for="emailInput">Email address</label>
+                                        <div class="form-floating mb-2">
+                                            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                                            <label for="floatingInput">Email address</label>
                                         </div>
 
                                         <!-- Password input -->
-                                        <div class="form-outline mb-2">
-                                            <input type="password" id="passwordInput"
-                                                class="form-control form-control-lg" />
-                                            <label class="form-label" for="passwordInput">Password</label>
+                                        <div class="form-floating mb-2">
+                                            <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                                            <label for="floatingPassword">Password</label>
                                         </div>
 
                                         <div class="d-flex justify-content-around align-items-center mb-4">
@@ -129,7 +129,7 @@
         </div>
     </div>
     <!-- Section -->
-    <section class="sec">
+    <section class="sec-1">
         <div class="container-lg">
             <div class="row">
                 <div class="col-lg-8 py-5 px-5 text-area">
@@ -190,9 +190,9 @@
         <div class="container">
             <footer class="py-3 my-4">
                 <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-                    <li class="nav-item"><a href="./index.html" class="nav-link px-2 text-body-secondary">Home</a></li>
-                    <li class="nav-item"><a href="./aboutMe.html" class="nav-link px-2 text-body-secondary">About</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Sustainability</a></li>
+                    <li class="nav-item"><a href="../html/index.html" class="nav-link px-2 text-body-secondary">Home</a></li>
+                    <li class="nav-item"><a href="../html/aboutMe.html" class="nav-link px-2 text-body-secondary">About</a></li>
+                    <li class="nav-item"><a href="../html/sustainability.html" class="nav-link px-2 text-body-secondary">Sustainability</a></li>
                     <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About SP</a></li>
                     <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Contact Us</a></li>
                 </ul>
