--- a/FED/CA2/html/sustainability.html
+++ b/FED/CA2/html/sustainability.html
@@ -152,6 +152,9 @@
         </div>
     </section>
     <section class="sec-2" id="sec-2">
+        <div id="content">
+            <!-- Content here -->
+        </div>
         <div id="carouselCaptions" class="carousel slide carousel-fade" data-bs-ride="carousel">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="0" class="active"
@@ -195,9 +198,6 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
-    </section>
-    <section id="content">
-        <!-- Content -->
     </section>
     <!-- Footer -->
     <div class="container">
