--- a/FED/CA2/html/aboutMe.html
+++ b/FED/CA2/html/aboutMe.html
@@ -46,7 +46,7 @@
                             <a href="../html/sustainability.html" class="nav-link">Sustainability</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">About SP</a>
+                            <a href="../html/aboutSP.html" class="nav-link">About SP</a>
                         </li>
                     </ul>
                 </div>
@@ -193,7 +193,7 @@
                     <li class="nav-item"><a href="../html/index.html" class="nav-link px-2 text-body-secondary">Home</a></li>
                     <li class="nav-item"><a href="../html/aboutMe.html" class="nav-link px-2 text-body-secondary">About</a></li>
                     <li class="nav-item"><a href="../html/sustainability.html" class="nav-link px-2 text-body-secondary">Sustainability</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About SP</a></li>
+                    <li class="nav-item"><a href="../html/aboutSP.html" class="nav-link px-2 text-body-secondary">About SP</a></li>
                     <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Contact Us</a></li>
                 </ul>
                 <p class="text-center text-body-secondary">&copy; 2023 Save The Earth, Greenfiy Inc</p>
