--- a/FED/CA2/html/index.html
+++ b/FED/CA2/html/index.html
@@ -46,7 +46,7 @@
                             <a href="../html/sustainability.html" class="nav-link">Sustainability</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">About SP</a>
+                            <a href="../html/aboutSP.html" class="nav-link">About SP</a>
                         </li>
                     </ul>
                 </div>
@@ -158,7 +158,7 @@
                     <p>There are numerous strategies to lower your carbon footprint, which is the amount of CO2 and
                         other
                         greenhouse gases generated into the atmosphere as a result of human activity.</p>
-                    <a href="#" class="icon-link">
+                    <a href="../html/sustainability.html" class="icon-link">
                         learn More
                         <img src="../images/arrow-right-up-svgrepo-com.svg" class="bi" alt="">
                     </a>
@@ -172,7 +172,7 @@
                     <p>The best place to start making a difference is right in your own home. Learn how you can reduce,
                         reuse,
                         and recycle materials to decrease household waste. </p>
-                    <a href="#" class="icon-link">
+                    <a href="../html/sustainability.html" class="icon-link">
                         Learn More
                         <img src="../images/arrow-right-up-svgrepo-com.svg" class="bi" alt="">
                     </a>
@@ -186,7 +186,7 @@
                     <p>Supporting sustainable products and practices is crucial for promoting a healthier planet and a
                         more
                         sustainable future.</p>
-                    <a href="#" class="icon-link">
+                    <a href="../html/sustainability.html" class="icon-link">
                         Learn More
                         <img src="../images/arrow-right-up-svgrepo-com.svg" class="bi" alt="">
                     </a>
@@ -202,7 +202,7 @@
                 <li class="nav-item"><a href="../html/index.html" class="nav-link px-2 text-body-secondary">Home</a></li>
                 <li class="nav-item"><a href="../html/aboutMe.html" class="nav-link px-2 text-body-secondary">About</a></li>
                 <li class="nav-item"><a href="../html/sustainability.html" class="nav-link px-2 text-body-secondary">Sustainability</a></li>
-                <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About SP</a></li>
+                <li class="nav-item"><a href="../html/aboutSP.html" class="nav-link px-2 text-body-secondary">About SP</a></li>
                 <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Contact Us</a></li>
             </ul>
             <p class="text-center text-body-secondary">&copy; 2023 Save The Earth, Greenfiy Inc</p>
