--- a/FED/CA2/html/sustainability.html
+++ b/FED/CA2/html/sustainability.html
@@ -46,7 +46,7 @@
                             <a href="../html/sustainability.html" class="nav-link current">Sustainability</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">About SP</a>
+                            <a href="../html/aboutSP.html" class="nav-link">About SP</a>
                         </li>
                     </ul>
                 </div>
@@ -545,7 +545,7 @@
                 </li>
                 <li class="nav-item"><a href="../html/sustainability.html"
                         class="nav-link px-2 text-body-secondary">Sustainability</a></li>
-                <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About SP</a></li>
+                <li class="nav-item"><a href="../html/aboutSP.html" class="nav-link px-2 text-body-secondary">About SP</a></li>
                 <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Contact Us</a></li>
             </ul>
             <p class="text-center text-body-secondary">&copy; 2023 Save The Earth, Greenfiy Inc</p>
